--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dubu.sukgod"
-    android:versionCode="10"
-    android:versionName="1.6" >
+    android:versionCode="12"
+    android:versionName="2.0" >
 
     <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="15"/>
 
@@ -26,6 +26,9 @@
         </activity>
 
         <activity android:name="com.dubu.sukgod.PhotoActivity" >
+        </activity>
+
+        <activity android:name="com.dubu.sukgod.PhotoOtherActivity" >
         </activity>
 
         <activity android:name="com.dubu.sukgod.PhotoViewActivity" >
