--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dubu.sukgod"
-    android:versionCode="12"
+    android:versionCode="13"
     android:versionName="2.0" >
 
     <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="15"/>
@@ -13,25 +13,26 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:name="com.dubu.sukgod.ToDoListApplication">
+        android:label="@string/app_name" android:name="com.dubu.sukgod.ToDoListApplication" >
         <activity
             android:name="com.dubu.sukgod.ToDoListActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.dubu.sukgod.CreateTodo" >
+        <activity android:name="com.dubu.sukgod.CreateTodo" android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name="com.dubu.sukgod.PhotoActivity" >
+        <activity android:name="com.dubu.sukgod.PhotoActivity" android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name="com.dubu.sukgod.PhotoOtherActivity" >
+        <activity android:name="com.dubu.sukgod.PhotoOtherActivity" android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name="com.dubu.sukgod.PhotoViewActivity" >
+        <activity android:name="com.dubu.sukgod.PhotoViewActivity" android:screenOrientation="portrait">
         </activity>
 
         <service android:name="com.parse.PushService" />
